updated git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,19 @@ luac.out
 *.src.rock
 *.zip
 *.tar.gz
+
+#Jetbrains IDE
+.idea
+
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+!.vscode/*.code-snippets
+
+# Local History for Visual Studio Code
+.history/
+
+# Built Visual Studio Code Extensions
+*.vsix
